sql/item.h
@@ -4046,6 +4046,8 @@ class Item_param :public Item_basic_value,
     longlong val_int(const Type_std_attributes *attr) const;
     my_decimal *val_decimal(my_decimal *dec, const Type_std_attributes *attr);
     String *val_str(String *str, const Type_std_attributes *attr);
+    String *val_str(String *str, const Type_std_attributes *attr,
+                    bool val_is_unsigned);
   };
 
   PValue value;
@@ -4150,7 +4152,7 @@ public:
   }
   String *val_str(String *str) override
   {
-    return can_return_value() ? value.val_str(str, this) : NULL;
+    return can_return_value() ? value.val_str(str, this, unsigned_flag) : NULL;
   }
   bool get_date(THD *thd, MYSQL_TIME *tm, date_mode_t fuzzydate) override;
   bool val_native(THD *thd, Native *to) override
